Temporary fix for announcement dismiss button being cut off by scroll bar

--- a/src/main/webapp/site/src/app/announcement/announcement.component.scss
+++ b/src/main/webapp/site/src/app/announcement/announcement.component.scss
@@ -15,7 +15,7 @@ $height: 40px;
 
 .announcement__dismiss.mat-icon-button {
   position: absolute;
-  right: 4px;
+  right: 16px;
   top: 0;
 }
 
